--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,5 +1,8 @@
 Classroom Info
 
-<%= render partial: "students/student", locals: {classroom_student: @student} %>
+<%= render partial: 'classroom', locals: {classroom: @classroom }%>
+<% @classroom.students.each do |student| %>
+    <%= render partial: 'students/student', locals: {student: @student} %>
+<% end %>
 
 
